Result set, not totally done but I just said 'holy shit it worked' so I need to check this in
